Thu Jul  8 00:15:50 2010  Yusuke Endoh  <mame@tsg.ne.jp>

	* gem_prelude.rb: provide workaround for gem activation.  Currently,
	  gem activation does not work by default.  Now it can be worked
	  around by requiring "rubygems" first.  [ruby-core:29486]
	  a patch from Evan Phoenix in [ruby-core:31096].

	* lib/rubygems.rb: ditto.

Sun Jul 11 15:14:03 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* Makefile.in ({|dist-|real-}clean-ext): fixes the previous
	  commit. http://twitter.com/knu/status/18247078381

	* tool/rmdirs: ditto.

Sat Jul 10 20:03:48 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* Makefile.in ({|dist-|real-}clean-ext): fixes syntax 
	  for /bin/sh on Solaris

	* tool/rmdirs: ditto

Thu Jul  8 15:47:34 2010  NARUSE, Yui  <naruse@ruby-lang.org>

        * string.c (rb_str_conv_enc_opts): fix infinite loop because
          of ISO-2022-JP conversion with empty string.
          patched by Brian Buchanan [ruby-core:31107]

Wed Jul  7 10:26:20 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* missing/close.c: ignore ECONNRESET.
	  FreeBSD wrongly sets ECONNRESET on close(2) and
	  it causes false-negative exceptions. [ruby-dev:41778]

	* configure.in: ditto.

Sun Jul  4 17:13:14 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (swallow, prepare_getline_args, rb_io_getline_1): fix for
	  paragraph mode reading in non-ascii-compatible encoding.
	  [ruby-dev:41803]

Sat Jul 10 11:41:54 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* test/psych/test_date_time.rb (TestDateTime#test_round_trip_with_offset):
	  test for [ruby-core:31023].

Mon Jul  5 12:32:01 2010  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/scalar_scanner.rb (parse_string): support
	  timezones that are not one hour off. [ruby-core:31023]

	* ext/psych/lib/psych/visitors/yaml_tree.rb: ditto

Sat Jul  3 09:47:26 2010  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/to_ruby.rb(visit_Psych_Nodes_Scalar):